--- a/src/app/modules/home/register-usr/pages/register-usr/register-usr.component.html
+++ b/src/app/modules/home/register-usr/pages/register-usr/register-usr.component.html
@@ -91,7 +91,7 @@
 
           <div class="form-group col-md-4">
             <label for="inputSexo">Sexo</label>
-            <select id="inputSexo" class="form-control">
+            <select  id="inputSexo" class="form-control">
               <option selected>Seleccione una opción...</option>
               <option>Masculino</option>
               <option>Femenino</option>
@@ -116,7 +116,7 @@
           </div>
         </div>
       
-        <button  >Enviar</button>
+        <button  >Registrar</button>
     </div>
     </form>
     </div>
