logo en register

--- a/src/app/modules/home/bienvenida-home/pages/bienvenida-home/bienvenida-home.component.html
+++ b/src/app/modules/home/bienvenida-home/pages/bienvenida-home/bienvenida-home.component.html
@@ -19,8 +19,8 @@
             <h4>CAPACITATE</h4>
             <h1> TECNOLOGICO DEL AZUAY </h1>
             <h3> Innovación de hoy para el éxito del mañana </h3>
-            <button class="btn" onclick="window.location.href='/Log'">Iniciar Sesión</button>
-            <button class="btn" onclick="window.location.href='/Reg'"> Registrate</button>
+            <button  (click)="goTologin($event)" class="btn">Iniciar Sesión</button>
+            <button  (click)="goToRegister($event)" class="btn"> Registrate</button>
         </div>
     </div>
 
