--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Dashboard - NiceAdmin Bootstrap Template</title>
+ 
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -24,6 +24,17 @@
   <!-- Template Main CSS File -->
   <link href="side-bar.component.css" rel="stylesheet">
 
+  <style>
+    #sidebarToggle {
+        display: none;
+      }
+  
+      @media only screen and (max-width: 1080px) {
+        #sidebarToggle {
+          display: block;
+        }
+      }
+  </style>
 
 </head>
 
@@ -37,7 +48,9 @@
         <img src="https://eduv.tecazuay.edu.ec/pluginfile.php/1/theme_academi/logo/1671035251/LOGO%20CUADRADO_SIN%20FONDO.png" alt="">
         <span class="d-none d-lg-block">TecAzuay</span>
       </a>
-  
+      <button  id="sidebarToggle" class="btn btn-primary">
+        <i class="bi bi-list"></i>
+      </button>
     </div><!-- End Logo -->
 
     <div class="search-bar">
