Heaader y homepage redireccion de btn

--- a/src/app/modules/home/bienvenida-home/pages/bienvenida-home/bienvenida-home.component.css
+++ b/src/app/modules/home/bienvenida-home/pages/bienvenida-home/bienvenida-home.component.css
@@ -184,7 +184,7 @@ a.b-home:hover {
 	margin-bottom: 5px;
 }
 .card .contenido-card a:hover{
-	background: #743ae1;
+	background: #3a88e1;
 	color: #fff;
 }
 @media only screen and (min-width:320px) and (max-width:768px){
