--- a/src/app/modules/home/bienvenida-home/pages/bienvenida-home/bienvenida-home.component.html
+++ b/src/app/modules/home/bienvenida-home/pages/bienvenida-home/bienvenida-home.component.html
@@ -38,7 +38,7 @@
 <div class="contenido-card">
     <h3>Desarrollo Movil</h3>
     <p>Capacitacion introductoria a desarrollo movil en java, kotlin , objetive-c y swift, herramientas y Programacion orientada a objetos</p>
-    <a href="#">Leer Màs</a>
+    <a (click)="goTologin($event)">Ingresar</a>
 </div>
 </div>
 <div class="card">
@@ -48,7 +48,7 @@
 <div class="contenido-card">
     <h3>Desarrollo Web</h3>
     <p>Capacitacion con nivel intermedio-avanzado, conociminetos de la web, framework a trabajar angular , herramientas VS y conexion con ApiRest </p>
-    <a href="#">Leer Màs</a>
+    <a  (click)="goTologin($event)">Ingresar</a>
 </div>
 </div>
 <div class="card">
@@ -58,7 +58,7 @@
 <div class="contenido-card">
     <h3>Desarrollo ApiRest </h3>
     <p>Creacion del backend desarrollado en java utilizando la herramienta de IntelliJ IDEA.</p>
-    <a href="#">Leer Màs</a>
+    <a  (click)="goTologin($event)">Ingresar</a>
 </div>
 </div>
 </div>
