--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -14,7 +14,7 @@
 
           <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
             <li>
-              <a id="ico" href="#" class="nav-link ">
+              <a  (click)="goToHome($event)" id="ico" href="#" class="nav-link ">
                 <i class="bi bi-house"></i>
                 Home
               </a>
@@ -41,8 +41,8 @@
            
           </ul>
           <div class="text-end">
-            <button type="button" style="border-radius: 15px;" class="btn btn-light text-dark me-2">Login</button>
-            <button type="button"  style="border-radius: 15px;" class="btn btn-primary">Sign-up</button>
+            <button  (click)="goToLogin($event)" type="button" style="border-radius: 15px;" class="btn btn-light text-dark me-2">Iniciar Sesion</button>
+            <button (click)="goToRegister($event)" type="button"  style="border-radius: 15px;" class="btn btn-primary">Registrarse</button>
           </div>
         </div>
       </div>
