--- a/src/app/modules/participantes/welcome-participantes/welcome-participantes.component.html
+++ b/src/app/modules/participantes/welcome-participantes/welcome-participantes.component.html
@@ -3,20 +3,15 @@
 
 <main id="main" class="main">
 
-    <div class="pagetitle">
-      <h1>Dashboard</h1>
-      <router-outlet></router-outlet>
-      <nav>
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item active">Dashboard</li>
+  <div class="pagetitle">
+    <!-- <h1>Formularios</h1> -->
+    <div  style="height: 300px; " class="bgimage">
 
-        
-        </ol>
-      </nav>
-    </div><!-- End Page Title -->
+    </div>
+    <router-outlet></router-outlet>
+   
+  </div><!-- End Page Title -->
 
-    
-
-  </main><!-- End #main -->
   
+
+</main><!-- End #main -->
