--- a/src/app/modules/super-admin/welcome-sup-admin/welcome-sup-admin.component.css
+++ b/src/app/modules/super-admin/welcome-sup-admin/welcome-sup-admin.component.css
@@ -50,12 +50,17 @@
   .pagetitle {
     margin-bottom: 10px;
   }
-  
+  /* */
   .pagetitle h1 {
     font-size: 24px;
     margin-bottom: 0;
     font-weight: 600;
-    color: #0b5be6;
+    color:#012970;
+    text-align: center;
+    margin: 0 auto;
+    background-color: #ffffff;
+    border-radius: 15px;
+    padding: 30px;
   }
    /* Breadcrumbs */
    .breadcrumb {
@@ -245,8 +250,23 @@
     background-color: #4154f1;
   }
  
+  .bgimage{
+    background: linear-gradient(rgba(230, 231, 238, 0.17), rgba(4, 104, 255, 0.087)),url("https://dev2020.tecazuay.edu.ec/wp-content/uploads/2022/11/cropped-LOGO-RECTANGULAR_SIN-FONDO.png ");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center; 
+   
+    width: 100%;
+    height: 140vh;
+    border-radius: 15px;
   
-  
+}
+@media (max-width: 800px) {
+  .bgimage {
+    background-size: contain;
+  }
+}
+
  
   
  
