--- a/src/app/modules/super-admin/welcome-sup-admin/welcome-sup-admin.component.html
+++ b/src/app/modules/super-admin/welcome-sup-admin/welcome-sup-admin.component.html
@@ -4,19 +4,16 @@
 <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Dashboard</h1>
-      <router-outlet></router-outlet>
-      <nav>
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item active">Dashboard</li>
+      <!-- <h1>Formularios</h1> -->
+      <div  style="height: 300px; " class="bgimage">
 
-        
-        </ol>
-      </nav>
+      </div>
+      <router-outlet></router-outlet>
+     
     </div><!-- End Page Title -->
 
     
 
   </main><!-- End #main -->
   
+
