--- a/src/app/modules/docente-capacitador/register-silabo/pages/register-silabo/register-silabo.component.html
+++ b/src/app/modules/docente-capacitador/register-silabo/pages/register-silabo/register-silabo.component.html
@@ -9,9 +9,9 @@
       rel="stylesheet"
     />
   </head>
-  <body style="border-radius: 15px;" >
-    <div   class="container mt-2">
-      <h1 style="margin-top: 15px; color:  #4154f1;" class="text-center mb-5">Formulario de Curso</h1>
+  <body style="border-radius: 15px; box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4); " >
+    <div  style="" class="container mt-2">
+      <h1 style="margin-top: 15px; " class="text-center mb-5">Formulario de Curso</h1>
       <form id="contenedorform" >
         <h2 class="mb-3">1. Información General del Curso</h2>
         <div class="row mb-3">
