--- a/src/app/modules/participantes/bienvenida-participantes/pages/bienvenida-participantes/bienvenida-participantes.component.html
+++ b/src/app/modules/participantes/bienvenida-participantes/pages/bienvenida-participantes/bienvenida-participantes.component.html
@@ -1,1 +1,54 @@
-<p>bienvenida-participantes works!</p>
+<!doctype html>
+<html lang="en" data-bs-theme="auto">
+  <head><script src="../assets/js/color-modes.js"></script>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="generator" content="Hugo 0.111.3">
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
+
+  </head>
+
+<main>
+
+  <div id="myCarousel" class="carousel slide car" data-bs-ride="carousel">
+  
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+     <img class="img-carousel" src="https://dev2020.tecazuay.edu.ec/wp-content/uploads/2022/11/encabezado3-1280x480.jpg">
+        <div class="container">
+          <div class="carousel-caption text-start">
+            <h1>Example headline.</h1>
+            
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+       <img class="img-carousel" src="https://www.bbva.com/wp-content/uploads/2020/11/gpt3-bbva-1-1024x683.jpg">
+        <div class="container">
+          <div class="carousel-caption">
+           
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="img-carousel"  src="https://scontent.fuio15-1.fna.fbcdn.net/v/t39.30808-6/342043495_769610987898701_1993429123696271834_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=a26aad&_nc_ohc=1Bv9UPmD1MEAX9cco3q&_nc_ht=scontent.fuio15-1.fna&oh=00_AfAYuVWlhzNDnDH9otDTGtK5JC8WWOQO-1CacyRoZ9z5EA&oe=644DC887">
+        <div class="container">
+          <div class="carousel-caption text-end">
+           
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  
+
+
+  
+
+</main>
+
+
+</html>
