--- a/src/app/modules/super-admin/welcome-sup-admin/welcome-sup-admin.component.css
+++ b/src/app/modules/super-admin/welcome-sup-admin/welcome-sup-admin.component.css
@@ -249,10 +249,10 @@
   .sidebar-nav .nav-content a.active i {
     background-color: #4154f1;
   }
- 
+  
   .bgimage{
-    background: linear-gradient(rgba(230, 231, 238, 0.17), rgba(4, 104, 255, 0.087)),url("https://dev2020.tecazuay.edu.ec/wp-content/uploads/2022/11/cropped-LOGO-RECTANGULAR_SIN-FONDO.png ");
-    background-size: cover;
+    background: linear-gradient(rgba(147, 146, 143, 0), rgba(4, 104, 255, 0.087)),url("https://dev2020.tecazuay.edu.ec/wp-content/uploads/2022/11/cropped-LOGO-RECTANGULAR_SIN-FONDO.png ");
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center; 
    
@@ -260,15 +260,15 @@
     height: 140vh;
     border-radius: 15px;
   
-}
-@media (max-width: 800px) {
+  }
+  @media (max-width: 800px) {
   .bgimage {
     background-size: contain;
   }
-}
-
- 
+  }
   
- 
   
- 
+  
+  
+  
+  
