--- a/src/app/shared/components/side-bar-admin/side-bar-admin.component.html
+++ b/src/app/shared/components/side-bar-admin/side-bar-admin.component.html
@@ -270,7 +270,13 @@
       </li><!-- End Forms Nav -->
 
 
-     
+      <li class="nav-item">
+        <a class="nav-link collapsed" data-bs-target="#chacrts-nav" data-bs-toggle="collapse" href="#" (click)="goToRegDocent($event)">
+          <i class="bi bi-person"></i><span>Registro Docente</span>
+        </a>
+       
+      </li><!-- End Charts Nav -->
+
     
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#chacrts-nav" data-bs-toggle="collapse" href="#" (click)="goToReportes($event)">
@@ -279,6 +285,7 @@
        
       </li><!-- End Charts Nav -->
 
+    
     
 
       <li class="nav-heading">Pages</li>
