--- a/src/app/modules/super-admin/register-admins/pages/register-admins/register-admins.component.html
+++ b/src/app/modules/super-admin/register-admins/pages/register-admins/register-admins.component.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body    style=" padding-bottom: 20px; border-radius: 15px; box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4); " >
     <div class="container mt-4">
       <h2 class="mb-4">Formulario de Profesor</h2>
       <form>
