--- a/src/app/modules/home/register-usr/pages/register-usr/register-usr.component.html
+++ b/src/app/modules/home/register-usr/pages/register-usr/register-usr.component.html
@@ -68,31 +68,31 @@
         <div class="form-row">
           <div class="form-group col-md-4">
             <label for="inputNombre">Nombre</label>
-            <input type="text" class="form-control" id="inputNombre" placeholder="Ingrese su nombre">
+            <input type="text" class="form-control" id="inputNombre" placeholder="Ingrese su nombre"  name="nombre" [(ngModel)]="persona.nombre">
           </div>
           <div class="form-group ccol-md-4">
             <label for="inputApellido">Apellido</label>
-            <input type="text" class="form-control" id="inputApellido" placeholder="Ingrese su apellido">
+            <input type="text" class="form-control" id="inputApellido" placeholder="Ingrese su apellido"  name="apellido" [(ngModel)]="persona.apellido">
           </div>
           <div class="form-group ccol-md-4">
             <label for="inputApellido">Fecha de Nac</label>
-            <input type="text" class="form-control" id="inputApellido" placeholder="Ingrese su apellido">
+            <input type="date" class="form-control" id="inputApellido" placeholder="Ingrese su apellido" name="fecha_nacimiento" [(ngModel)]="persona.fecha_nacimiento">
           </div>
         </div>
         <div class="form-row">
           
           <div class="form-group col-md-4">
             <label for="inputEmail">Email</label>
-            <input type="email" class="form-control" id="inputEmail" placeholder="Ingrese su correo electrónico">
+            <input type="email" class="form-control" id="inputEmail" placeholder="Ingrese su correo electrónico" name="email" [(ngModel)]="persona.email">
           </div>
           <div class="form-group col-md-4">
             <label for="inputDireccion">Dirección</label>
-          <input type="text" class="form-control" id="inputDireccion" placeholder="Ingrese su dirección">
+          <input type="text" class="form-control" id="inputDireccion" placeholder="Ingrese su dirección"  name="direccion" [(ngModel)]="persona.direccion">
           </div>
 
           <div class="form-group col-md-4">
             <label for="inputSexo">Sexo</label>
-            <select  id="inputSexo" class="form-control">
+            <select  id="inputSexo" class="form-control" name="sexo" [(ngModel)]="persona.sexo">
               <option selected>Seleccione una opción...</option>
               <option>Masculino</option>
               <option>Femenino</option>
@@ -105,19 +105,34 @@
          
           <div class="form-group ccol-md-4">
             <label for="inputEtnia">Etnia</label>
-            <input type="text" class="form-control" id="inputEtnia" placeholder="Ingrese su etnia">
+            <input type="text" class="form-control" id="inputEtnia" placeholder="Ingrese su etnia" name="etnia" [(ngModel)]="persona.etnia">
           </div>
           <div class="form-group col-md-4">
             <label for="inputTelefono">Teléfono</label>
-            <input type="tel" class="form-control" id="inputTelefono" placeholder="Ingrese su teléfono">
+            <input type="tel" class="form-control" id="inputTelefono" placeholder="Ingrese su teléfono" name="telefono" [(ngModel)]="persona.telefono" >
           </div>
           <div class="form-group col-md-4">
             <label for="inputCelular">Celular</label>
-            <input type="tel" class="form-control" id="inputCelular" placeholder="Ingrese su celular">
+            <input type="tel" class="form-control" id="inputCelular" placeholder="Ingrese su celular" name="celular" [(ngModel)]="persona.celular">
           </div>
         </div>
+        <div class="form-row">
+         
+            <div class="form-group ccol-md-4">
+              <label for="inputEtnia">Cedula</label>
+              <input type="text" class="form-control" id="inputCedula" placeholder="Ingrese su cedula" name="cedula" [(ngModel)]="persona.cedula">
+            </div>
+            <div class="form-group col-md-4">
+              <label for="inputTelefono">Usuario</label>
+              <input type="tel" class="form-control" id="inputusernam" placeholder="Ingrese su teléfono" name="username" [(ngModel)]="usuario.username" >
+            </div>
+            <div class="form-group col-md-4">
+              <label for="inputCelular">Password</label>
+              <input type="password" class="form-control" id="inputpassword" placeholder="Ingrese su password" name="password" [(ngModel)]="usuario.password">
+            </div>
+          </div>
       
-        <button  >Registrar</button>
+        <button  (click)="onSubmit()" >Registrar</button>
     </div>
     </form>
     </div>
