--- a/src/app/modules/super-admin/register-admins/pages/register-admins/register-admins.component.html
+++ b/src/app/modules/super-admin/register-admins/pages/register-admins/register-admins.component.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Formulario de Administrador</title>
+    <title>Formulario de Profesor</title>
     <!-- CSS de Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
   </head>
-  <body    style=" padding-bottom: 20px; border-radius: 15px; box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4); " >
+  <body>
     <div class="container mt-4">
       <h2 class="mb-4">Formulario de Profesor</h2>
       <form>
@@ -18,37 +18,37 @@
           <div class="col-md-6">
             <div class="mb-3">
               <label for="cedula" class="form-label">Cédula</label>
-              <input type="text" class="form-control" id="cedula" />
+              <input type="text" class="form-control" id="cedula" name="cedula" [(ngModel)]="persona.cedula"/>
             </div>
           </div>
           <div class="col-md-6">
             <div class="mb-3">
               <label for="nombre" class="form-label">Nombre</label>
-              <input type="text" class="form-control" id="nombre" />
+              <input type="text" class="form-control" id="nombre" name="nombre" [(ngModel)]="persona.nombre" />
             </div>
           </div>
         </div>
         <div class="mb-3">
           <label for="apellido" class="form-label">Apellido</label>
-          <input type="text" class="form-control" id="apellido" />
+          <input type="text" class="form-control" id="apellido" name="apellido" [(ngModel)]="persona.apellido" />
         </div>
         <div class="mb-3">
           <label for="fechaNacimiento" class="form-label"
             >Fecha de Nacimiento</label
           >
-          <input type="date" class="form-control" id="fechaNacimiento" />
+          <input type="date" class="form-control" id="fechaNacimiento"  name="fecha_nacimiento" [(ngModel)]="persona.fecha_nacimiento" />
         </div>
         <div class="mb-3">
           <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" id="email" />
+          <input type="email" class="form-control" id="email"   name="email" [(ngModel)]="persona.email"/>
         </div>
         <div class="mb-3">
           <label for="direccion" class="form-label">Dirección</label>
-          <input type="text" class="form-control" id="direccion" />
+          <input type="text" class="form-control" id="direccion"  name="direccion" [(ngModel)]="persona.direccion" />
         </div>
         <div class="mb-3">
           <label for="sexo" class="form-label">Sexo</label>
-          <select class="form-select" id="sexo">
+          <select class="form-select" id="sexo" name="sexo" [(ngModel)]="persona.sexo">
             <option selected>Selecciona...</option>
             <option value="femenino">Femenino</option>
             <option value="masculino">Masculino</option>
@@ -56,7 +56,7 @@
         </div>
         <div class="mb-3">
           <label for="etnia" class="form-label">Etnia</label>
-          <select class="form-select" id="etnia">
+          <select class="form-select" id="etnia"  name="etnia" [(ngModel)]="persona.etnia" >
             <option selected>Selecciona...</option>
             <option value="mestizo">Mestizo</option>
             <option value="indigena">Indígena</option>
@@ -75,6 +75,7 @@
                 type="text"
                 class="form-control"
                 id="telefonoConvencional"
+                name="telefono" [(ngModel)]="persona.telefono"
               />
             </div>
           </div>
@@ -83,19 +84,19 @@
               <label for="telefonoCelular" class="form-label"
                 >Nro. de Teléfono Celular</label
               >
-              <input type="text" class="form-control" id="telefonoCelular" />
+              <input type="text" class="form-control" id="telefonoCelular" name="celular" [(ngModel)]="persona.celular" />
             </div>
           </div>
         </div>
         <div class="mb-3">
           <label for="usuario" class="form-label">Usuario</label>
-          <input type="text" class="form-control" id="usuario" />
+          <input type="text" class="form-control" id="usuario"  name="username" [(ngModel)]="usuario.username" />
         </div>
         <div class="mb-3">
           <label for="contrasena" class="form-label">Contraseña</label>
-          <input type="password" class="form-control" id="contrasena" />
+          <input type="password" class="form-control" id="contrasena"  name="password" [(ngModel)]="usuario.password" />
         </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
+        <button  (click)="onSubmit()" type="submit" class="btn btn-primary">Enviar</button>
       </form>
     </div>
   </body>
