--- a/src/app/modules/home/auth/pages/auth/auth.component.html
+++ b/src/app/modules/home/auth/pages/auth/auth.component.html
@@ -61,12 +61,12 @@
       <img id="imagenlogo" src="https://eduv.tecazuay.edu.ec/pluginfile.php/1/theme_academi/logo/1671035251/LOGO%20CUADRADO_SIN%20FONDO.png" alt="">
     
       <div class="login-container"></div>
-      <form>
+      <form [formGroup]="loginForm"    (ngSubmit)="login(loginForm.value)">
         <h3 >  <img id="imagenlogo" src="https://eduv.tecazuay.edu.ec/pluginfile.php/1/theme_academi/logo/1671035251/LOGO%20CUADRADO_SIN%20FONDO.png" alt=""></h3>
         <label >Ingrese El usuario</label>
-        <input type="text" placeholder="Email or Phone" id="username">
+        <input type="text" placeholder="Email or Phone" id="username" [(ngModel)]="usuario.username" formControlName="username" > 
         <label >Ingrese La Contraseña</label>
-        <input type="password" placeholder="Password" id="password">
+        <input type="password" placeholder="Password" id="password" [(ngModel)]="usuario.password" formControlName="password">
         <button>Iniciar Sesion</button>
        
       </form>
