--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200;1,300;1,400&display=swap');
 .footer{
 	background-color: #0c0c0c;
     padding: 70px 0;
@@ -110,13 +111,76 @@
     text-align: justify;
     
   }
+ img{
+    max-width: 240px;
+    float: right;
+    margin-right: 0px;
+    align-items: center;
+  }
+  .right{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 2rem;
+    max-width: 450px;
+    height: 0px;
+  }
 
+  .iconos-centro{
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      margin-top: 2rem;
+      max-width: 350px;
+      height: 0px;
+  }
 
+  .right a{
+    display: block;
+    margin-top: 1rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: #333;
+  }
+.social-icons li{
+   /* list-style: none;
+    margin-bottom: 5.4rem;
+    display: flex;
+    justify-content: center;*/
+    display: inline-block;
+    margin-right: 1rem;
+}
+@media screen and (min-width: 900px) {
+  .footer-div{
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .social-media,.news-form li{
+   /* width: 100%;
+    max-width: 27.3rem;
+    margin: 0 1rem;*/
+    display: inline-block;
+    margin-right: 1rem;
+  }
+  
+}
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+html {
+    font-family: 'Poppins', sans-serif;
+    font-size: 10px;
+    color: rgb(5, 9, 236);
+    scroll-behavior: smooth;
+}
 
-
-
-
-
-
-
+body {
+    overflow-x: hidden;
+    font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
+}
