--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <footer class="footer">
     <div class="container">
         <div class="row">
@@ -8,11 +10,34 @@
                     <li><a href="#">¿Quienes somos?</a></li>
                     <li><a href="#">Mision</a></li>
                     <li><a href="#">Vision</a></li>
-
                 </ul>
             </div>
-          
-            
+            <div class="iconos-centro">
+                <div class="social-media">
+                    <h4>Siguenos</h4>
+                    <ul class="social-icons">
+                        <li>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fab fa-facebook-square"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                    </ul>
+                </div>
+            </div>
+            <div class="right">
+                <img id="imagenlogo" src="https://eduv.tecazuay.edu.ec/pluginfile.php/1/theme_academi/logo/1671035251/LOGO%20CUADRADO_SIN%20FONDO.png" alt="">
+                <!-- <a>Dirección: Octavio Chacón Moscoso 1-98 y Primera Transversal (Parque industrial)</a> -->
+            </div>
+            <div>
+                
+            </div>
+
         </div>
     </div>
 </footer> 
