Validaciones de cedula correcciones de errores

--- a/src/app/modules/home/register-usr/pages/register-usr/register-usr.component.html
+++ b/src/app/modules/home/register-usr/pages/register-usr/register-usr.component.html
@@ -120,7 +120,12 @@
          
             <div class="form-group ccol-md-4">
               <label for="inputEtnia">Cedula</label>
-              <input type="text" class="form-control" id="inputCedula" placeholder="Ingrese su cedula" name="cedula" [(ngModel)]="persona.cedula">
+              <input type="text" 
+              class="form-control" 
+              id="inputCedula" 
+              placeholder="Ingrese su cedula" 
+              name="cedula" [(ngModel)]="persona.cedula"
+              >
             </div>
             <div class="form-group col-md-4">
               <label for="inputTelefono">Usuario</label>
