--- a/src/app/shared/components/side-bar-participante/side-bar-participante.component.html
+++ b/src/app/shared/components/side-bar-participante/side-bar-participante.component.html
@@ -262,6 +262,11 @@
               <i class="bi bi-circle"></i><span>Estado Cursos </span>
             </a>
           </li>
+          <li>
+            <a (click)="goTo_evacurso($event)">
+              <i class="bi bi-circle"></i><span>Evaluacion Cursos </span>
+            </a>
+          </li>
          
         </ul>
       </li><!-- End Forms Nav -->
