Modulo vista perfil docente y Edit perfil docenten (Edisson)

--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -329,9 +329,25 @@
         </ul>
       </li><!-- End Charts Nav -->
 
+      
+
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#chacrts-nav" data-bs-toggle="collapse" href="#" (click)="goToReportes($event)">
           <i class="bi bi-award"></i><span>Reportes</span>
+        </a>
+       
+      </li><!-- End Charts Nav -->
+
+      <li class="nav-item">
+        <a class="nav-link collapsed" data-bs-target="#chacrts-nav" data-bs-toggle="collapse" href="#" (click)="goToeditprofile($event)">
+          <i class="bi bi-award"></i><span>Edicion Perfil</span>
+        </a>
+       
+      </li><!-- End Charts Nav --> 
+
+      <li class="nav-item">
+        <a class="nav-link collapsed" data-bs-target="#chacrts-nav" data-bs-toggle="collapse" href="#" (click)="goToprofile($event)">
+          <i class="bi bi-award"></i><span>Vista del perfil</span>
         </a>
        
       </li><!-- End Charts Nav -->
