--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -366,6 +366,24 @@
          
         </ul>
       </li><!-- End Charts Nav -->
+      <li class="nav-item">
+        <a class="nav-link collapsed" data-bs-target="#days-nav" data-bs-toggle="collapse" href="#">
+          <i class="bi bi-gem"></i><span>Dias</span><i class="bi bi-chevron-down ms-auto"></i>
+        </a>
+        <ul id="days-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+          <li>
+            <a (click)=" goToregisdays($event)">
+              <i class="bi bi-circle"></i><span>Registrar dias</span>
+            </a>
+          </li>
+          <li>
+            <a (click)="goTo_edit_list_days($event)">
+              <i class="bi bi-circle"></i><span>Listar/Editar dias</span>
+            </a>
+          </li>
+         
+        </ul>
+      </li><!-- End Charts Nav -->
       
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#DocentePerfil-nav" data-bs-toggle="collapse" href="#">
